--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -18,9 +18,22 @@ jobs:
         with:
           name: webpack artifcats
           path: public/
+    deploy:
+      name: Deploy Node.js app to AWS
+      needs: build
+      runs-on: ubuntu-latest
 
-      - name: Deploy to AWS
-        uses: github/deploy-nodejs@master
-        env:
-          AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
-          AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+      steps:
+        - uses: actions/checkout@v1
+
+        - name: Download built artifact
+          uses: actions/download-artifact@master
+          with:
+            name: webpack artifacts
+            path: public
+
+        - name: Deploy to AWS
+          uses:  github/deploy-nodejs@master
+          env:
+            AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+            AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
